# nix-mcp

./: GEMINI.md  README.md  gemini-extension.json  pyproject.toml
src/nix_mcp/: server.py
