[project]
name = "nix-mcp"
version = "0.1.0"
description = "Nix flake management and scaffolding tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.4",
]

[project.scripts]
nix-mcp = "nix_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nix_mcp"]
